[package]
name = "gnd-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
description = "Tools to analyze and process the Integrated Authority File managed by the DNB"
homepage = "https://www.dnb.de/DE/Professionell/ProjekteKooperationen/Projekte/KI/ki_node.html"

[dependencies]
clap = { version = "3.0", features = ["derive"] }

[[bin]]
path = "src/bin/gnd/main.rs"
name = "gnd"
