[package]
name = "gnd-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
description = "Tools to analyze and process the Integrated Authority File managed by the DNB"
homepage = "https://www.dnb.de/DE/Professionell/ProjekteKooperationen/Projekte/KI/ki_node.html"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
pica = { git = "https://github.com/deutsche-nationalbibliothek/pica-rs.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[[bin]]
path = "src/bin/gnd/main.rs"
name = "gnd"
